more complete backup work

--- a/en/case-studies/detail/113/index.html
+++ b/en/case-studies/detail/113/index.html
@@ -141,7 +141,7 @@ theForm.elements[i].checked = status;
 <p>EC's implementation of the Commuter Challenge in the NCR in 2000 was based on nine years of experience with one-day "cycle to work" challenges that evolved into a week-long "Commuter Challenge." </p><!-- Informed already contains P tags.-->
 <h2>Delivering the Program</h2>
 <p><strong>Organizing EC's Participation</strong></p>
-<p>Participation by all organizations, including EC, was voluntary (<a href="/English/ToolsofChange/default.asp?Section=WorkPrograms">Work Programs that Influence the Home</a>). In all aspects of planning, every effort was made to minimize resource needs and to create a friendly atmosphere.</p>
+<p>Participation by all organizations, including EC, was voluntary (<a href="../../../../en/tools-of-change/work-programs/">Work Programs that Influence the Home</a>). In all aspects of planning, every effort was made to minimize resource needs and to create a friendly atmosphere.</p>
 <p>EC developed a three-pronged program to encourage participation:</p>
 <p><strong><em>1. The key EC coordinator:</em></strong></p>
 <ul>
