--- a/fr/accueil/index.html
+++ b/fr/accueil/index.html
@@ -116,7 +116,7 @@ theForm.elements[i].checked = status;
 <li><a href="../../fr/ressources-de-sujets/changements-climatiques/" title="Changements climatiques">Changements climatiques</a></li>
 <li><a href="../../fr/ressources-de-sujets/déchets/" title="Déchets ">Déchets</a></li>
 <li><a href="../../fr/ressources-de-sujets/transport/" title="Transport, Écotransport">Écotransport</a></li>
-<li><a href="../../fr/ressources-de-sujets/efficacit%C3%A9-%C3%A9nerg%C3%A9tique/" title="Efficacité énergétique">Efficacité énergétique</a></li>
+<li><a href="../../fr/ressources-de-sujets/efficacite-energetique/" title="Efficacité énergétique">Efficacité énergétique</a></li>
 <li><a href="../../fr/ressources-de-sujets/prévention-de-la-pollution/" title="Prévention de la pollution">Prévention de la pollution </a></li>
 <li><a href="../../fr/ressources-de-sujets/valorisation-de-l'eau/" title="valorisation de l'eau">Valorisation de l'eau</a></li>
 </ul>
@@ -129,7 +129,7 @@ theForm.elements[i].checked = status;
 <ul>
 <li><a href="../../fr/ressources-de-sujets/condition-physique/" title="Condition physique">Condition physique</a></li>
 <li><a href="../../fr/ressources-de-sujets/nutrition/" title="Nutrition">Nutrition</a></li>
-<li><a href="../../fr/ressources-de-sujets/santé-cardiovasculaire/" title="Santé cardiovasculaire ">Santé cardiovasculaire</a></li>
+<li><a href="../../fr/ressources-de-sujets/sante-cardiovasculaire/" title="Santé cardiovasculaire ">Santé cardiovasculaire</a></li>
 <li><a href="../../fr/ressources-de-sujets/conditions-du-milieu" title="Conditions du milieu">Conditions du milieu</a></li>
 <li><a href="../../fr/ressources-de-sujets/sida/" title="SIDA">SIDA </a></li>
 <li><a href="../../fr/ressources-de-sujets/tabagisme/" title="Tabagisme">Tabagisme</a></li>
@@ -145,7 +145,7 @@ theForm.elements[i].checked = status;
 <li><a href="../../fr/ressources-de-sujets/prévention-du-crime/" title="Prévention du crime">Prévention du crime</a></li>
 <li><a href="../../fr/ressources-de-sujets/prévention-du-harcèlement/" title="Prévention du harcèlement">Prévention du harcèlement</a></li>
 <li><a href="../../fr/ressources-de-sujets/santé-et-sécurité-au-travail/">Santé et sécurité au travail </a></li>
-<li><a href="../../fr/ressources-de-sujets/s%C3%A9curit%C3%A9-routi%C3%A8re/" title="Preview page /Ressources-De-Matiere/Sécurité-routière/">Sécurité routière</a><a href="../../fr/ressources-de-sujets/la-m%C3%A9decine-du-travail/" title="Preview page /Ressources-De-Matiere/La-médecine-du-travail/"><br/>
+<li><a href="../../fr/ressources-de-sujets/securite-routiere/" title="Preview page /Ressources-De-Matiere/Sécurité-routière/">Sécurité routière</a><a href="../../fr/ressources-de-sujets/la-medecine-du-travail/" title="Preview page /Ressources-De-Matiere/La-médecine-du-travail/"><br/>
 </a></li>
 </ul>
 <p><img alt="arrow icon" class="left_arrow_icon" complete="complete" height="11" src="../../public/images/arrow_icon.gif" width="11"/><a href="../../fr/ressources-de-sujets/">Sous-sujets</a></p>
