--- a/fr/etudes-de-cas/detail/135/index.html
+++ b/fr/etudes-de-cas/detail/135/index.html
@@ -180,7 +180,7 @@ theForm.elements[i].checked = status;
 <h2>Obtenir le financement pour le programme</h2>
 <p>Le budget total du projet était de 3 045 000 $. Voici quelques-unes des contributions :</p>
 <ul>
-<li>Hydro-Québec a versé 753 000 $, ce qui comprend le prêt et l'installation d'un chargeur pour chaque véhicule électrique acheté ou loué dans le cadre du projet. Hydro-Québec a fourni gratuitement ces éléments pendant la durée du projet (<a href="/Francais/ToolsofChange/default.asp?Section=Financial">Mesures financières incitatives et dissuasives</a>).</li>
+<li>Hydro-Québec a versé 753 000 $, ce qui comprend le prêt et l'installation d'un chargeur pour chaque véhicule électrique acheté ou loué dans le cadre du projet. Hydro-Québec a fourni gratuitement ces éléments pendant la durée du projet (<a href="../../../../fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/">Mesures financières incitatives et dissuasives</a>).</li>
 <li>Le gouvernement fédéral a injecté 500 000 $ dans le cadre de sa contribution à la réduction des missions canadiennes aux niveaux prescrits par le Protocole de Kyoto. De ce montant, 400 000 $ proviennent de l'initiative Mesures d'action précoce en matière de technologie, qui fait partie du Fonds d'action pour le changement climatique, alors que 100 000 $ proviennent de Développement économique Canada.</li>
 <li>Le gouvernement du Québec a versé 200 000 $ et a également intégré des VÉ à ses parcs de véhicules.</li>
 <li>Norvik Traction a versé 300 000 $.</li>
