--- a/fr/outils-de-changement/Communications-personnalisees-percutantes/index.html
+++ b/fr/outils-de-changement/Communications-personnalisees-percutantes/index.html
@@ -129,7 +129,7 @@ renseignements leur sont livrés de façon percutante et personnalisée.</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
-<p>Veuillez consulter les directives par étapes servant à définir les obstacles et les motivateurs à la section  <a href="../../../fr/guide-de-planification/obtenir-informé/"> Comment bien s'informer </a>.</p>
+<p>Veuillez consulter les directives par étapes servant à définir les obstacles et les motivateurs à la section  <a href="../../../fr/guide-de-planification/obtenir-informe/"> Comment bien s'informer </a>.</p>
 <p>Faire une liste.</p>
 <p>Motivateurs :</p>
 
