--- a/fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/index.html
+++ b/fr/outils-de-changement/Mesures-financieres-incitatives-et-dissuasives/index.html
@@ -206,23 +206,23 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 </tr>
 <tr>
 <td valign="top" width="50%">Cadeaux, laissez-passer et prix</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/7"><i>Clean Air Commute</i></a>, <a href="../../../fr/études-de-cas/detail/14">Guelph 2000</a>, <a href="../../../fr/études-de-cas/detail/18">École publique Norway</a>, <a href="../../../fr/études-de-cas/detail/95"><b>off ramp</b></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/7"><i>Clean Air Commute</i></a>, <a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a>, <a href="../../../fr/etudes-de-cas/detail/18">École publique Norway</a>, <a href="../../../fr/etudes-de-cas/detail/95"><b>off ramp</b></a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Prix réduits (permis quotidiens flexibles), coupons-rabais</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/3"><i>BC21 PowerSmart</i></a>, <a href="../../../fr/études-de-cas/detail/17"><i>JEEP</i></a>, <a href="../../../fr/études-de-cas/detail/12"><i>Go Boulder</i></a>, <a href="../../../fr/études-de-cas/detail/20"><i>Peterborough Green-Up</i></a>, <a href="../../../fr/études-de-cas/detail/9"><i>The     Environment Network</i></a>, <a href="../../../fr/études-de-cas/detail/91">Programme de sensibilisation sur la qualité de l'air en Oregon</a>, <a href="../../../fr/études-de-cas/detail/95"><b>off ramp</b></a>, <a href="../../../fr/études-de-cas/detail/96">U-PASS</a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/3"><i>BC21 PowerSmart</i></a>, <a href="../../../fr/etudes-de-cas/detail/17"><i>JEEP</i></a>, <a href="../../../fr/etudes-de-cas/detail/12"><i>Go Boulder</i></a>, <a href="../../../fr/etudes-de-cas/detail/20"><i>Peterborough Green-Up</i></a>, <a href="../../../fr/etudes-de-cas/detail/9"><i>The     Environment Network</i></a>, <a href="../../../fr/etudes-de-cas/detail/91">Programme de sensibilisation sur la qualité de l'air en Oregon</a>, <a href="../../../fr/etudes-de-cas/detail/95"><b>off ramp</b></a>, <a href="../../../fr/etudes-de-cas/detail/96">U-PASS</a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Objets gratuits (composteurs, arbres)</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/8"><i>Earth-Works</i></a>, <a href="../../../fr/études-de-cas/detail/14">Guelph 2000</a>, <a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/8"><i>Earth-Works</i></a>, <a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a>, <a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Prêts à faible intérêt</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/22"><i>ReCAP</i></a>, <a href="../../../fr/études-de-cas/detail/19"><i>Pacific Gas and Electric</i></a>, <a href="../../../fr/études-de-cas/detail/9"><i>The Environment Network</i></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/22"><i>ReCAP</i></a>, <a href="../../../fr/etudes-de-cas/detail/19"><i>Pacific Gas and Electric</i></a>, <a href="../../../fr/etudes-de-cas/detail/9"><i>The Environment Network</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Sursis dans la hausse d'impôt</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/25"><i>WaterSmart</i></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/25"><i>WaterSmart</i></a></td>
 </tr>
 <tr>
 <td align="center" bgcolor="#d0dfe2" valign="top" width="50%">Mesures dissuasives</td>
@@ -230,15 +230,15 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 </tr>
 <tr>
 <td valign="top" width="50%">Utilisateur-payeur</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a>, <a href="../../../fr/études-de-cas/detail/96">U-PASS</a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a>, <a href="../../../fr/etudes-de-cas/detail/96">U-PASS</a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Amendes</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/25"><i>WaterSmart</i></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/25"><i>WaterSmart</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Délices comestibles</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/95"><b>off ramp</b></a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/95"><b>off ramp</b></a></td>
 </tr>
 </tbody>
 </table>
