--- a/fr/outils-de-changement/animateurs-de-quartier---meneurs-populaires/index.html
+++ b/fr/outils-de-changement/animateurs-de-quartier---meneurs-populaires/index.html
@@ -123,11 +123,11 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td width="50%">Réduction de déchets - le recyclage</td>
-<td width="50%"><a href="../../../fr/études-de-cas/detail/6">Claremont</a></td>
+<td width="50%"><a href="../../../fr/etudes-de-cas/detail/6">Claremont</a></td>
 </tr>
 <tr>
 <td width="50%">Réduction de déchets - compostage</td>
-<td width="50%"><a href="../../../fr/études-de-cas/detail/8">Earth-Works</a>, <a href="../../../fr/études-de-cas/detail/23">Sheffield Mills Community Association</a></td>
+<td width="50%"><a href="../../../fr/etudes-de-cas/detail/8">Earth-Works</a>, <a href="../../../fr/etudes-de-cas/detail/23">Sheffield Mills Community Association</a></td>
 </tr>
 </tbody>
 </table>
