--- a/fr/outils-de-changement/de-bouche-a-oreille/index.html
+++ b/fr/outils-de-changement/de-bouche-a-oreille/index.html
@@ -111,14 +111,14 @@ la promotion de la piste se fait de bouche à oreille. </p>
 <p>La communication de bouche à oreille constitue souvent un très bon moyen pour se
 renseigner sur un nouveau comportement et pour adopter une nouvelle attitude. Les
 responsables des programmes 
-<a href="../../../fr/études-de-cas/detail/3">
+<a href="../../../fr/etudes-de-cas/detail/3">
 <i>BC21 PowerSmart</i></a>, 
-<a href="../../../fr/études-de-cas/detail/14">
+<a href="../../../fr/etudes-de-cas/detail/14">
 Guelph 2000</a>, 
 
-<a href="../../../fr/études-de-cas/detail/22"><i>
+<a href="../../../fr/etudes-de-cas/detail/22"><i>
 ReCAP</i></a> et 
-<a href="../../../fr/études-de-cas/detail/9">
+<a href="../../../fr/etudes-de-cas/detail/9">
 <i>The
 Environment Network</i></a> ont découvert que c'était aussi l'une des meilleures façons de
 convaincre les gens de prendre rendez-vous pour les visites à domicile. Qui plus est, le
@@ -198,7 +198,7 @@ bouche à oreille est habituellement gratuit. </p>
 <p class="tip_example"><strong>Conseil:</strong> Voir l'Outil <a href="../../../fr/outils-de-changement/Retroaction">Rétroaction</a>.</p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton <em>Back</em> pour retourner à cette page.<br/>
 <a href="/images/documentimages/tools/feedback-1.jpg"><img alt="Global Action Plan image" border="0" height="93" src="/images/documentimages/tools/feedback-1.jpg" width="189"/></a><br/>
-		Cette carte a fourni aux participants passés et actuels de <a href="../../../fr/études-de-cas/detail/11/">GAP</a> l'information sur les accomplissements globaux du programme qu'ils pourraient partager avec d'autres (1996).</p>
+		Cette carte a fourni aux participants passés et actuels de <a href="../../../fr/etudes-de-cas/detail/11/">GAP</a> l'information sur les accomplissements globaux du programme qu'ils pourraient partager avec d'autres (1996).</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
