--- a/fr/outils-de-changement/groupes-de-soutien-par-les-pairs/index.html
+++ b/fr/outils-de-changement/groupes-de-soutien-par-les-pairs/index.html
@@ -116,11 +116,11 @@ Lorsqu'ils sont ensemble, les membres du groupe se considèrent tous comme étan
 la plupart des outils de changement sur une base continue et d'obtenir des autres l'appui
 nécessaire pour poursuivre leurs efforts. L'efficacité de rapports aussi directs entre
 les personnes a été maintes fois démontrée dans d'autres domaines, comme les
-Alcooliques anonymes, et sur le plan environnemental, avec des groupes comme le  <a href="../../../fr/études-de-cas/detail/11"><i>Global Action Plan (GAP)</i></a>.</p>
+Alcooliques anonymes, et sur le plan environnemental, avec des groupes comme le  <a href="../../../fr/etudes-de-cas/detail/11"><i>Global Action Plan (GAP)</i></a>.</p>
 <h3>Quand l'utiliseriez-vous? </h3>
 <p>La création de groupes de soutien par les pairs peut s'avérer utile lorsque les
 obstacles au changement sont particulièrement importants ou que les actions exigées
-sont nombreuses ou complexes. En se sens, on peut s'inspirer du <a href="../../../fr/études-de-cas/detail/11"><i>Global Action Plan</i></a>. Lancé
+sont nombreuses ou complexes. En se sens, on peut s'inspirer du <a href="../../../fr/etudes-de-cas/detail/11"><i>Global Action Plan</i></a>. Lancé
 en 1989, ce projet incite les gens à adopter des comportements plus écologiques en vue
 de sauvegarder l'environnement de la planète. </p>
 <h3>Comment l'utiliseriez-vous? </h3></div>
@@ -147,7 +147,7 @@ de sauvegarder l'environnement de la planète. </p>
 <p>Les participants au projet <em><a href="../../../fr/etudes-de-cas/detail/11">GAP</a> </em>ont d'abord analysé de quelle façon ils exploitaient diverses ressources dans leur propre foyer. À l'aide du guide, ils ont ensuite engagé, chaque mois, des mesures spécifiques à domicile.</p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton <em>Back</em> pour retourner à cette page.<br/>
 <a href="/images/documentimages/tools/peersg-1.jpg"><img alt="Peer Support Groups image" border="0" height="92" src="/images/documentimages/tools/peersg-1.jpg" width="149"/></a><br/>
-		Cette partie d'un guide du chef de sujet illustre le niveau du support fourni à l'amorce de chaque réunion, et aussi le support fourni par ces amorces aux autres membres de leur groupe. Pour d'autres extraits voir <a href="../../../fr/études-de-cas/detail/11/"><em>GAP</em></a>.</p>
+		Cette partie d'un guide du chef de sujet illustre le niveau du support fourni à l'amorce de chaque réunion, et aussi le support fourni par ces amorces aux autres membres de leur groupe. Pour d'autres extraits voir <a href="../../../fr/etudes-de-cas/detail/11/"><em>GAP</em></a>.</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
