--- a/fr/outils-de-changement/motivateurs/index.html
+++ b/fr/outils-de-changement/motivateurs/index.html
@@ -137,7 +137,7 @@ theForm.elements[i].checked = status;
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> organise une campagne nationale de promotion axée sur les deux principaux facteurs de motivation, le confort et les économies, utilisant des expressions comme « Le confort, on y tient », « Il aide à faire votre maison chaud et confortable, tout en réduisant vos coûts de chauffage », « Réduisez vos coûts énergetiques » et « En avoir pour votre argent ».</p><p><a href="../../../fr/etudes-de-cas/detail/108">Le programme de conservation de l'eau de Barrie</a> expliquait que si les résidents ne parvenaient pas à économiser suffisamment d'eau, la ville se verrait alors dans l'obligation de hausser ses redevances pour l'eau.  De plus, ses affiches mettaient l'accent sur les économies que feraient les ménages sur les factures d'eau.</p><p><a href="../../../fr/etudes-de-cas/detail/107">Le projet multi-universitaire de co-voiturage</a> a utilisé des slogans tels que « Pourquoi vous rendre fous, vous pouvez utiliser le co-voiturage », « Si vous ne pouvez supporter la chaleur, joignez-vous au co-voiturage » et « Co-voiturage et économies! » faisant référence aux raisons clés pour utiliser le co-voiturage : la frustration de la congestion et ne pas être capable de trouver un stationnement, les changements climatiques et le désir des gens d'économiser de l'argent.</p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton <em>Back</em> pour retourner à cette page.<br/>
 <a href="/images/documentimages/GetInLoop/GetInLoop-1.jpg"><img alt="Get In the Loop image" border="0" height="96" src="/images/documentimages/GetInLoop/GetInLoop-1.jpg" width="181"/></a><br/>
-	Les repères de <a href="../../../fr/etudes-de-cas/detail/ID=10"><em>Get in the Loop</em></a> étaient de 4,25 pouces de grandes par 5,5 pouces de haut (10,8 centimètres X 13,3 centimètres) et ont été imprimées en trois couleurs. Elles ont porté le même logo qui a été utilisé dans la toutes les publicité et promotion.</p>
+	Les repères de <a href="../../../fr/etudes-de-cas/detail/10"><em>Get in the Loop</em></a> étaient de 4,25 pouces de grandes par 5,5 pouces de haut (10,8 centimètres X 13,3 centimètres) et ont été imprimées en trois couleurs. Elles ont porté le même logo qui a été utilisé dans la toutes les publicité et promotion.</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
@@ -186,24 +186,24 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <td valign="top" width="33%">Affiches au travail et ailleurs, feuilles de compilation
     mensuelle, tee-shirts et autres articles arborant un logo </td>
 <td valign="top" width="33%">Transports</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/7"><i>The Clean Air Commute</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/7"><i>The Clean Air Commute</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%">Collants placés sur des produits à la maison </td>
 <td valign="top" width="33%">Déchets</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/26"><i>We're Toxic Free</i></a>, <a href="../../../fr/études-de-cas/detail/9"><i>The Environment Network</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/26"><i>We're Toxic Free</i></a>, <a href="../../../fr/etudes-de-cas/detail/9"><i>The Environment Network</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%">Regard sur les gestes des voisins, cartons « Beside » et «
     Inside »</td>
 <td valign="top" width="33%">Déchets</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%">Repères sur les rayons et autres articles de promotion en
     magasin </td>
 <td valign="top">Déchets</td>
-<td valign="top" width="33%"><a href="../../../fr/études-de-cas/detail/10"><i>Get in the Loop - Buy Recycled</i></a>, <a href="../../../fr/études-de-cas/detail/91">Programme de sensibilisation sur la qualité de l'air en Oregon</a> </td>
+<td valign="top" width="33%"><a href="../../../fr/etudes-de-cas/detail/10"><i>Get in the Loop - Buy Recycled</i></a>, <a href="../../../fr/etudes-de-cas/detail/91">Programme de sensibilisation sur la qualité de l'air en Oregon</a> </td>
 </tr>
 </table>
 </div>
