--- a/fr/outils-de-changement/obtenir-un-engagement/index.html
+++ b/fr/outils-de-changement/obtenir-un-engagement/index.html
@@ -126,7 +126,7 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Exemples</h1>
-<p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont demandé aux résidants de participer à la tournée d'évaluation de la maison. Ils ont pris note de leurs réactions à chaque étape du processus. À la fin de la visite, ils les ont invités à rédiger avec eux la liste des réparations ou rénovations prioritaires à exécuter.</p><p>Les programmes <a href="../../../fr/etudes-de-cas/detail/87">«Les citoyens à l'oeuvre» et «Comptez sur moi!»</a>, ont permis aux participants de franchir différentes étapes préparatoires avant de signer un engagement.</p><p><a href="../../../fr/etudes-de-cas/detail/127">Water Efficient Durham</a> demandait aux propriétaire de signer un formulaire d’engagement lors de la quatrième visite des étudiants. Le facteur de réussite le plus déterminant à cette étape-ci était le niveau de confiance que les étudiants avaient réussi à établir avec les propriétaires.</p>
+<p>Les conseillers à domicile de <em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>ont demandé aux résidants de participer à la tournée d'évaluation de la maison. Ils ont pris note de leurs réactions à chaque étape du processus. À la fin de la visite, ils les ont invités à rédiger avec eux la liste des réparations ou rénovations prioritaires à exécuter.</p><p>Les programmes <a href="../../../fr/etudes-de-cas/detail/87">«Les citoyens à l'oeuvre» et «Comptez sur moi!»</a>, ont permis aux participants de franchir différentes étapes préparatoires avant de signer un engagement.</p><p><a href="../../../fr/etudes-de-cas/detail/445">Water Efficient Durham</a> demandait aux propriétaire de signer un formulaire d’engagement lors de la quatrième visite des étudiants. Le facteur de réussite le plus déterminant à cette étape-ci était le niveau de confiance que les étudiants avaient réussi à établir avec les propriétaires.</p>
 <p class="tip_example"><strong>Conseil:</strong> Les recherches démontrent que cet outil ne s'avérera pas utile si la     personne n'a pas déjà l'intention d'agir ou si elle sent qu'on exerce des pres-sions     indues sur elle.</p>
 </div>
 <!--/plan_col_left-->
@@ -194,61 +194,61 @@ theForm.elements[i].checked = status;
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">public</td>
 <td valign="top" width="25%">efficacité en eau</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/4"><i>Be Water Wise ... It Makes Cents</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/4"><i>Be Water Wise ... It Makes Cents</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">privé</td>
 <td valign="top" width="25%">déchets</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/6">Ville de Claremont</a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/6">Ville de Claremont</a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">public</td>
 <td valign="top" width="25%">transports </td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/7"><i>Clean Air Commute</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/7"><i>Clean Air Commute</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">engagement verbal en fonction d'une liste rédigée ensemble</td>
 <td valign="top" width="25%">privé</td>
 <td valign="top" width="25%">divers</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/14">Guelph 2000</a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/14">Guelph 2000</a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">les deux</td>
 <td valign="top" width="25%">énergie</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/16">Ville d'Iowa</a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/16">Ville d'Iowa</a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">les deux</td>
 <td valign="top" width="25%">énergie</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/15"><i>In Concert with the Environment</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/15"><i>In Concert with the Environment</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">verbal</td>
 <td valign="top" width="25%">les deux</td>
 <td valign="top" width="25%">énergie</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/16">Ville d'Iowa</a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/16">Ville d'Iowa</a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">engagement verbal en fonction d'une liste rédigée ensemble</td>
 <td valign="top" width="25%">privé</td>
 <td valign="top" width="25%">divers</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/22"><i>ReCAP</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/22"><i>ReCAP</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">écrit</td>
 <td valign="top" width="25%">privé</td>
 <td valign="top" width="25%">déchets</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/24"><i>The Toxic Challenge</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/24"><i>The Toxic Challenge</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="25%">verbal</td>
 <td valign="top" width="25%">privé</td>
 <td valign="top" width="25%">déchets</td>
-<td valign="top" width="25%"><a href="../../../fr/études-de-cas/detail/23"><i>Sheffield Mills Community Association</i></a></td>
+<td valign="top" width="25%"><a href="../../../fr/etudes-de-cas/detail/23"><i>Sheffield Mills Community Association</i></a></td>
 </tr>
 </tbody>
 </table>
