--- a/fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/index.html
+++ b/fr/outils-de-changement/programmes-en-milieu-de-travail-qui-affectent-le-foyer/index.html
@@ -134,11 +134,11 @@ quelqu'un d'autre qui s'ensert, veuillez nous faire part de ces expériences á 
 </tr>
 <tr>
 <td valign="top" width="50%">Transports</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/7">The Clean Air Commute</a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/7">The Clean Air Commute</a></td>
 </tr>
 <tr>
 <td valign="top" width="50%">Transports</td>
-<td valign="top" width="50%"><a href="../../../fr/études-de-cas/detail/12">Go Boulder</a></td>
+<td valign="top" width="50%"><a href="../../../fr/etudes-de-cas/detail/12">Go Boulder</a></td>
 </tr>
 </table>
 </div>
