--- a/fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps/index.html
+++ b/fr/outils-de-changement/soutenir-la-motivation-au-fil-du-temps/index.html
@@ -115,7 +115,7 @@ theForm.elements[i].checked = status;
 <ul>
 <li>Avant de concevoir votre programme, identifiez les motivateurs les plus pertinents.  Intégrez ensuite les techniques suivantes á votre programme. Chaque technique doit respecter un échéancier précis, tel qu'indiqué ci dessous. </li>
 </ul>
-<p>L'exemple principal utilisé ici est celui du service de visites à domicile de <a href="../../../fr/études-de-cas/detail/22"><i>ReCAP</i></a>, mis sur pied en 1993 dans le cadre du programme sur les collectivités écologiques de l'Ontario. </p>
+<p>L'exemple principal utilisé ici est celui du service de visites à domicile de <a href="../../../fr/etudes-de-cas/detail/22"><i>ReCAP</i></a>, mis sur pied en 1993 dans le cadre du programme sur les collectivités écologiques de l'Ontario. </p>
 <h3>Comment l'utiliseriez-vous?</h3></div>
 <div class="clear"> </div><!--/clear_the_area-->
 <!--/Bar-->
@@ -210,7 +210,7 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <p class="tip_example"><strong>Conseil:</strong> Afin d'aider les gens à se percevoir comme des personnes intéressées et
     engagées, on peut même les féliciter de conserver leurs factures de services publics,
     de lire la plupart des brochures d'information qu'ils reçoivent ou d'avoir fait venir
-    chez eux un conseiller de <a href="../../../fr/études-de-cas/detail/22/"><em>ReCAP</em></a>.</p>
+    chez eux un conseiller de <a href="../../../fr/etudes-de-cas/detail/22/"><em>ReCAP</em></a>.</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
@@ -238,7 +238,7 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Exemples </h1>
-<p>Dans la <a href="../../../fr/etudes-de-cas/detail/16">ville d'Iowa</a>, les gens qui savaient que leur nom serait publié ont réussi à réduire de 10 à 20 pour cent leur taux de consommation de gaz naturel et d'électricité. Lorsqu'on garantissait l'anonymat aux participants, on ne remarquait aucune baisse significative dans le taux d'usage.</p><p><em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>a demandé aux résidants de s'engager verbalement à effectuer les réparations ou les rénovations prioritaires indiquées dans la liste que chacun avait aidé à rédiger.</p><p>Quand les enfants et leur famille joignaient le <a href="../../../fr/etudes-de-cas/detail/115">programme des Autobus scolaires pédestres</a>, ils s'engageaient verbalement à marcher à l'école.</p> <p>À leur quatrième visite chez les propriétaires, les étudiants salariés du programme <a href="../../../fr/etudes-de-cas/detail/127">Water Efficient Durham</a> leur ont demandé de signer un formulaire d’engagement</p>
+<p>Dans la <a href="../../../fr/etudes-de-cas/detail/16">ville d'Iowa</a>, les gens qui savaient que leur nom serait publié ont réussi à réduire de 10 à 20 pour cent leur taux de consommation de gaz naturel et d'électricité. Lorsqu'on garantissait l'anonymat aux participants, on ne remarquait aucune baisse significative dans le taux d'usage.</p><p><em><a href="../../../fr/etudes-de-cas/detail/22">ReCAP</a> </em>a demandé aux résidants de s'engager verbalement à effectuer les réparations ou les rénovations prioritaires indiquées dans la liste que chacun avait aidé à rédiger.</p><p>Quand les enfants et leur famille joignaient le <a href="../../../fr/etudes-de-cas/detail/115">programme des Autobus scolaires pédestres</a>, ils s'engageaient verbalement à marcher à l'école.</p> <p>À leur quatrième visite chez les propriétaires, les étudiants salariés du programme <a href="../../../fr/etudes-de-cas/detail/445">Water Efficient Durham</a> leur ont demandé de signer un formulaire d’engagement</p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
