--- a/fr/ressources-de-sujets/detail/77/index.html
+++ b/fr/ressources-de-sujets/detail/77/index.html
@@ -91,77 +91,80 @@ theForm.elements[i].checked = status;
 </div><!--/headwrap-->
 <div id="nav_container">
 <div id="nav">
-<ul> <li><a class="menu_class" href="../../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class" href="../../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class_current" href="../../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class" href="../../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
+<ul> <li><a class="menu_class" href="../../../../fr/guide-de-planification/" id="hb_2">Planification</a> </li> <li><a class="menu_class" href="../../../../fr/outils-de-changement/" id="hb_3">Outils de changement</a> </li> <li><a class="menu_class" href="../../../../fr/etudes-de-cas/" id="hb_4">Études de cas</a> </li> <li><a class="menu_class_current" href="../../../../fr/ressources-de-sujets/" id="hb_5">Ressources thématiques</a> </li> <li><a class="menu_class" href="../../../../fr/ateliers/" id="hb_6">Webinaires et ateliers</a> </li> <li><a class="menu_class" href="../../../../fr/au-sujet-de-nous/" id="hb_7">Au sujet de nous</a> </li> </ul>
 </div> <!-- end #nav -->
 </div> <!-- end #nav_container -->
 <div id="content_cap"></div>
 <div id="content_wrap">
 <div class="left_wrap" data-pagefind-body>
-
-<div class="case_study_sidebar_wrap">
-<div class="case_study_sidebar_cap"></div>
-<div class="case_study_sidebar_body">
-<p><a href="../../../../fr/ressources-de-sujets/"><img alt="Topic Resources" class="topic_ad" height="107" src="../../../../public/images/topic_ad_fr.gif" width="182"/> </a> </p>
-<h5>Outils utilisés</h5>
-<ul>
+ <div class="left_wrap">
+<div class="left_content">
+<!-- modified 8-20-2007 Brian Loomis  <p><a href="topic_resources.htm">Topic Resources</a> &raquo; <a href="clean_air.htm">Clean Air</a> &raquo; <a href="topic_list.htm">Iowa City</a></p>
+  
+ -->
+<table class="topics">
+<tr>
+<td class="highlight_box">Titre:</td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Restrictions sur la publicité des produits riches en matières grasses, en sel et en sucre</h2></td>
+</tr>
+<tr>
+<td class="highlight_box">l'adresse URL:</td>
+<td class="rt_text_box"><a href="http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-022-01331-y" target="_new">http://ijbnpa.biomedcentral.com/articles/10.1186/s12966-022-01331-y</a></td>
+</tr>
+<tr>
+<td class="highlight_box">Aperçu:</td>
+<td class="rt_text_box"><p>Cette étude contrôlée en libre accès a examiné les impacts de la restriction des publicités de malbouffe sur les bus, les métros, les arrêts et les gares à Londres, au Royaume-Uni. Il a estimé une réduction directe de l'obésité, du diabète et des maladies cardiovasculaires, ainsi que des économies de coûts de santé associées.</p></td>
+</tr>
+<tr>
+<td class="highlight_box">Faits saillants:</td>
+<td class="rt_text_box"><ul>
+<li>En 2019, le système de voyage intégré de Londres a commencé à restreindre les publicités pour les produits riches en matières grasses, en sel et en sucre. Une analyse contrôlée de séries chronologiques interrompues a comparé Londres à une population témoin dans le nord de l'Angleterre.</li>
+<li>Dr. Chloe Thomas, première auteure de l'étude de la School of Health and Related Research (ScHARR) de l'Université de Sheffield, a déclaré : « Nous savons tous à quel point la publicité peut être persuasive et puissante pour influencer ce que nous achetons, en particulier la nourriture que nous mangeons. Notre étude a montré à quel point les restrictions publicitaires peuvent être un outil important pour aider les gens à mener une vie plus saine sans leur coûter plus cher.»</li>
 </ul>
-</div>
-<!--/case_study_sidebar_body-->
-<div class="tan_cap_bottom"></div>
-</div>
-<!--/case_study_sidebar_wrap-->
-<div class="case_studies_content">
-<h1 data-pagefind-meta="title">Économiser l'eau chez soi</h1>
-<p><em>ALERTE SUR LA RECHERCHE ET LES RESSOURCES POUR LES CANADIENS :</em> les municipalités et les autres agences peuvent acheter en grande quantité ce guide à sur l'économie des ressources en eau à l'intention des propriétaires canadiens. Vous pouvez faire imprimer le logo de votre agence sur la page couverture, et l'information sur la personne à contacter et l'identification de votre entreprise à l'endos du document.</p><!-- Header already contains P tags.-->
-<h2>Historique</h2>
-<p>La Société canadienne d’hypothèques et de logement (SCHL) est fière d’offrir aux municipalités partout au Canada un moyen peu coûteux pour fournir aux résidents de l’information pratique et facile à comprendre sur l’économie des ressources en eau. Le guide <em>Économiser l’eau chez soi</em> produit par la SCHL (disponible en anglais et en français) est le seul du genre au pays fournissant aux propriétaires des renseignement complets sur l’économie des ressources en eau.</p>
-<p>Le guide est rempli d’information sur l’économie des ressources en eau à l’intérieur et à l’extérieur de la maison. Généreusement illustré de photos couleur et d’illustrations, le guide montre aux résident comment détecter les fuites et les réparer, faire un utilisation sage de l’eau pour les tâche quotidiennes, et planifier leurs aménagements paysagers en tenant compte de l’économie des ressources en eau. Contrairement aux pamphlets et aux encarts, le guide a été conçu comme outil de référence à l’intention des résidents, outil qu’ils conserveront et utiliseront pendant des années.</p>
-<p>Conçu à partir du guide sur l’économie des ressources en eau produit par la région de <a href="../../../../fr/etudes-de-cas/detail/127">Durham</a>, document qui a obtenu un grand succès, la SCHL a consulté les municipalités partout au Canada pour créer un document national qui répondrait aux besoins régionaux des municipalités et de leurs résidents. Le résultat de cette consultation est un guide fournissant aux municipalités des moyens peu coûteux à l’intention de leurs résidents par l’entremise d’un outil convivial sur l’économie des ressources en eau dans l’utilisation quotidienne. Vous pouvez faire imprimer le logo de votre agence sur la page couverture, et l’information sur la personne à contacter et l’identification de votre entreprise à l’endos du document.</p><!-- Background already contains P tags.-->
-<h2>Bien s'informer</h2>
-<p>Cette publication renferme une révision des meilleures pratiques techniques à l’intention des propriétaires désirant réduire leur consommation d’eau grâce à des ajustements et des réparations, et leur consommation d’eau à l’extérieur – incluant de l’information sur les plantes nécessitant moins d’eau.</p><!-- Informed already contains P tags.-->
-<h2>Mettre en oeuvre le programme</h2>
-<p><strong>Franchir des obstacles spécifiques</strong></p>
-<p><em>Économiser l’eau chez soi</em> renferme des conseils et des illustrations couleur sur la réduction de consommation d’eau grâce à des ajustements et des réparations, et leur consommation d’eau à l’extérieur – incluant de l’information sur les plantes nécessitant moins d’eau.</p><!-- Delivering already contains P tags.-->
-<h2>Résultats</h2>
-<p>Les résidents de la municipalité régionale de Halton à qui l’on a remis le Guide sans les contacter au préalable ont réduit leur consommation d’eau de 34 litres les jours de canicule. Ceux à qui l’on a d’abord téléphoné au sujet du guide qu’ils allaient recevoir ont réduit leur consommation d’eau de 54 litres au cours des mêmes journées. (Voir la section des Notes à la fin de <a href="../../../../fr/etudes-de-cas/detail/127">Valorisation de l’eau à Durham </a>)</p><!-- Results_B already contains P tags.-->
-<h2>Contacter</h2>
-<p><b>Société canadienne d’hypothèques et de logement</b><br/>
-Téléphone : 1-800 668-2642 (613-668-2642)<br/>
-Télécopieur : 1 800 245-9274 (613 – 748-4069)<br/>
-Site Web : <a href="http://www.cmhc-schl.gc.ca">www.cmhc-schl.gc.ca</a></p>
-<p><b>Pour commander des copies, communiquez avec :</b><br/>
-Sandra Baynes<br/>
-Division de la recherche<br/>
-Société canadienne d’hypothèques et de logement<br/>
-700, chemin Montreal, Ottawa, Ontario, <br/>
-K1A 0P7 <br/>
-Tél. : (613) 748-2284<br/>
-Télécopieur : (613) 748-2402<br/>
-Courriel :<a href="mailto:sbaynes@chmc-schl.gc.ca"> sbaynes@cmhc-schl.gc.ca</a></p><!-- Contacts already contains P tags.-->
-<h2>Notes</h2>
-<p><b>Développer un partenariat</b></p>
-<p>La SCHL produit toute une gamme d’outils visant l’économie des ressources en eau, les techniques d’aménagement paysager durables, l’adaptation aux changements climatiques, atténuation des changements climatiques, économie des ressources énergétiques, transport et réduction des déchets.</p><!-- Footer already contains P tags.-->
-</div>
-<!--/case_studies_content-->
-
+<p><strong>REMARQUE</strong> : des restrictions publicitaires sont également appliquées pour les produits et services liés aux combustibles fossiles. Pour plus de détails, consultez <a href="../../../../fr/ressources-de-sujets/detail/76">cette ressource</a>.</p></td>
+</tr>
+<tr>
+<td class="highlight_box">Sujets:</td>
+<td class="rt_text_box">Health Promotion, Nutrition</td>
+</tr>
+<tr>
+<td class="highlight_box">Endroit:</td>
+<td class="rt_text_box"> </td>
+</tr>
+<tr>
+<td class="highlight_box">Catégorie:</td>
+<td class="rt_text_box"> </td>
+</tr>
+<tr>
+<td class="highlight_box">Éditeur:</td>
+<td class="rt_text_box">Springer Nature</td>
+</tr>
+<tr>
+<td class="highlight_box">Mis à jour:</td>
+<td class="rt_text_bottom">2023-03-18 11:08:04</td>
+</tr>
+</table>
+</div><!--/left_content-->
+</div><!--/left_wrap-->
 </div><!--/left_main-->
 <div class="right_column">
 <div class="advanced_side_cap_top"></div>
 <div class="advanced_side_body">
-<p><strong>Recherche les Ressources de sujets
+<p><strong>Recherche ressources de sujets
         </strong></p>
 
 <input name="special" type="hidden" value="mood"/>
-<input name="do" type="hidden" value="case_studies"/>
+<input name="do" type="hidden" value="topic_resources"/>
 <table class="search_sidebar_styles">
 <tr>
-<td class="text_area"><input name="search_phrase" onblur="this.value=!this.value?'Recherche':this.value;" onclick="this.value='';" onfocus="this.select()" size="16" type="text" value="Recherche"/></td>
+<td class="text_area"><input name="search_phrase" onblur="this.value=!this.value?'Recherche':this.value;" onclick="this.value='';" onfocus="this.select()" size="18" type="text" value="Recherche"/></td>
 <td class="go_area"><input src="../../../../public/images/go_button_yellow.gif" type="image" value="Search"/></td>
 </tr>
 </table>
 
 <p>
-<a href="../../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/">	Cliquez pour la Recherche avancée »</a></p>
+<a href="../../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/">	Cliquez pour la Recherche avancée  »</a>
+</p>
 </div>
 <!--/news_body-->
 <div class="advanced_side_cap_bottom"></div>
