--- a/fr/ressources-de-sujets/index.html
+++ b/fr/ressources-de-sujets/index.html
@@ -113,7 +113,7 @@ theForm.elements[i].checked = status;
 <li><a href="../../fr/ressources-de-sujets/changements-climatiques/" title="Changements Climatiques">Changements climatiques</a></li>
 <li><a href="../../fr/ressources-de-sujets/déchets/" title="Déchets">Déchets</a></li>
 <li><a href="../../fr/ressources-de-sujets/transport/" title="Écotransport">Écotransport</a></li>
-<li><a href="../../fr/ressources-de-sujets/efficacit%C3%A9-%C3%A9nerg%C3%A9tique/" title="Efficacité-énergétique">Efficacité énergétique</a></li>
+<li><a href="../../fr/ressources-de-sujets/efficacite-energetique/" title="Efficacité-énergétique">Efficacité énergétique</a></li>
 <li><a href="../../fr/ressources-de-sujets/prévention-de-la-pollution/" title="Prévention de la pollution">Prévention de la pollution</a></li>
 <li><a href="../../fr/ressources-de-sujets/valorisation-de-l'eau/" title="Valorizsation de l'eau">Valorization de l'eau</a></li>
 </ul>
@@ -124,7 +124,7 @@ theForm.elements[i].checked = status;
 <ul>
 <li><a href="../../fr/ressources-de-sujets/condition-physique/" title="Condition physique">Condition physique</a></li>
 <li><a href="../../fr/ressources-de-sujets/nutrition/" title="Nutrition">Nutrition</a></li>
-<li><a href="../../fr/ressources-de-sujets/Santé cardiovasculaire/" title="Santé cardiovasculaire ">Santé cardiovasculaire</a></li>
+<li><a href="../../fr/ressources-de-sujets/sante-cardiovasculaire/" title="Santé cardiovasculaire ">Santé cardiovasculaire</a></li>
 <li><a href="../../fr/ressources-de-sujets/conditions-du-milieu" title="Conditions du milieu">Conditions du mileu</a></li>
 <li><a href="../../fr/ressources-de-sujets/sida/" title="SIDA">SIDA </a></li>
 <li><a href="../../fr/ressources-de-sujets/tabagisme/" title="Tabagisme">Tabagisme</a></li>
@@ -138,7 +138,7 @@ theForm.elements[i].checked = status;
 <li><a href="../../fr/ressources-de-sujets/prévention-du-crime/" title="Prévention du crime">Prévention du crime</a></li>
 <li><a href="../../fr/ressources-de-sujets/prévention-du-harcèlement/" title="Prévention du harcèlement">Prévention du harcèlement</a></li>
 <li><a href="../../fr/ressources-de-sujets/santé-et-sécurité-au-travail/" title="Santé et sécurité au travail ">Santé et sécurité au travail</a></li>
-<li><a href="../../fr/ressources-de-sujets/s%C3%A9curit%C3%A9-routi%C3%A8re/" title="Sécurité-routière">Sécurité routière</a></li>
+<li><a href="../../fr/ressources-de-sujets/securite-routiere/" title="Sécurité-routière">Sécurité routière</a></li>
 </ul>
 </div>
 <!--/three_col_tan_square3-->
