--- a/fr/ressources-de-sujets/sante-cardiovasculaire/index.html
+++ b/fr/ressources-de-sujets/sante-cardiovasculaire/index.html
@@ -45,9 +45,9 @@
 
 		</script>
 <title>Outils de changement
- </title>
-<meta content="Tools of Change provides proven methods for promoting health, safety and environmental citizenship. " name="description"/>
-<meta content="community-based social marketing, fostering sustainable behavior, " name="keywords"/>
+  - Santé cardiovasculaire</title>
+<meta content="Tools of Change provides proven methods for promoting health, safety and environmental citizenship.  - Santé cardiovasculaire" name="description"/>
+<meta content="community-based social marketing, fostering sustainable behavior,  - Santé cardiovasculaire" name="keywords"/>
 <meta content="s00lyK//ZiuVC3dRiLKS4TDMpFlwn/oafWhDXsNI4Uo=" name="verify-v1"/>
 <meta content="text/html;charset=utf-8" http-equiv="Content-type"/>
 <link href="favicon.ico" rel="shortcut icon" type="image/ico"/>
@@ -97,10 +97,24 @@ theForm.elements[i].checked = status;
 <div id="content_cap"></div>
 <div id="content_wrap">
 <div class="left_wrap" data-pagefind-body>
-
+ <!--/topic_resources_wrap--> <!--/left_wrap-->
+<div class="left_content">
+<h1 data-pagefind-meta="title">Ressources de la santé cardiovasculaire</h1>
+<p>Cette section du site offre un accès rapide à des études de cas et à des ressources de marketing social en ligne utiles pour les personnes concernées par la santé cardiovasculaire. Nous apprécions les <a href="../../../en/contact-us/">suggestions d'études de cas et de ressources supplémentaires.</a>.</p>
+<!--/left_content--></div>
+<div class="one_col_tan_wrap">
+<div class="one_col_tan_cap"> </div>
+<div class="one_column_left">
+<h3>Dernières nouvelles</h3>
+<h6>19 mars, 2023  | Publication de deux nouvelles études de cas et quatre nouvelles ressources thématiques</h6>
+Nous avons ajouté deux nouvelles études de cas sur la santé cardiovasculaire et quatre nouvelles ressources thématiques au cours de la dernière année. Vous pouvez accéder et lire les résumés de ces études de cas en haut de la colonne de gauche ci-dessous. Vous pouvez accéder et lire les résumés des nouvelles ressources thématiques en haut de la colonne de droite ci-dessous.
+</div>
+<!--/two_column_left-->
+<div class="one_col_tan_btm"><!--/two_col_tan_wrap--></div>
+</div>
 <div class="left_content2">
 <div class="ms_col_left">
-<h1 class="header_2col" data-pagefind-meta="title">Études de cas les plus récentes : Santé Cardiovasculaire</h1>
+<h1 class="header_2col">Études de cas les plus récentes : Sante Cardiovasculaire</h1>
 <div class="highlight_box"><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/"> Recherche avancée d’études de cas</a></div>
 <h2 class="sub_header_2col">
 <img alt="Landmark Case Study" class="landmark_div" height="27" src="../../../public/images/landmark_white.gif"/>
@@ -122,7 +136,7 @@ theForm.elements[i].checked = status;
 <p><img alt="arrow icon" class="left_arrow_icon" height="11" src="../../../public/images/arrow_icon.gif" width="11"/><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/advanced-search-results/?-MaxRecords=50&amp;-SkipRecords=0&amp;-Op=bw&amp;do=case_studies&amp;-Op=bw&amp;special=mood&amp;-Op=bw&amp;-Op=bw&amp;topic=Heart&amp;button=Submit">PLUS »</a></p>
 </div>
 <div class="ms_col_right">
-<h1 class="header_2col">Ressources de sujets les plus récentes : Santé Cardiovasculaire</h1>
+<h1 class="header_2col">Ressources de sujets les plus récentes : Sante Cardiovasculaire</h1>
 <div class="highlight_box"><a href="../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/">Recherche avancée de ressources de sujets</a></div>
 <h2 class="sub_header_2col"><a href="../../../fr/ressources-de-sujets/detail/104">Kit de communication sur les maladies cardiaques du CDC</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 Ce kit en ligne comprend des messages sur les réseaux sociaux, des graphiques et des vidéos partageables. ... <strong><a href="../../../fr/ressources-de-sujets/detail/104">Lisez plus »</a></strong>
