--- a/fr/ressources-de-sujets/securite-routiere/index.html
+++ b/fr/ressources-de-sujets/securite-routiere/index.html
@@ -115,7 +115,7 @@ Nous avons ajouté deux nouvelles études de cas sur la sécurité routière et 
 </div>
 <div class="left_content2">
 <div class="ms_col_left">
-<h1 class="header_2col">Études de cas les plus récentes : Sécurité Routière</h1>
+<h1 class="header_2col">Études de cas les plus récentes : Securite Routiere</h1>
 <div class="highlight_box"><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/"> Recherche avancée d’études de cas</a></div>
 <h2 class="sub_header_2col">
 <img alt="Landmark Case Study" class="landmark_div" height="27" src="../../../public/images/landmark_white.gif"/>
@@ -138,7 +138,7 @@ Nous avons ajouté deux nouvelles études de cas sur la sécurité routière et 
 <p><img alt="arrow icon" class="left_arrow_icon" height="11" src="../../../public/images/arrow_icon.gif" width="11"/><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/advanced-search-results/?-MaxRecords=50&amp;-SkipRecords=0&amp;-Op=bw&amp;do=case_studies&amp;-Op=bw&amp;special=mood&amp;-Op=bw&amp;-Op=bw&amp;topic=Road&amp;button=Submit">PLUS »</a></p>
 </div>
 <div class="ms_col_right">
-<h1 class="header_2col">Ressources de sujets les plus récentes : Sécurité Routière</h1>
+<h1 class="header_2col">Ressources de sujets les plus récentes : Securite Routiere</h1>
 <div class="highlight_box"><a href="../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/">Recherche avancée de ressources de sujets</a></div>
 <h2 class="sub_header_2col"><a href="../../../fr/ressources-de-sujets/detail/112">Effets des interventions pour prévenir les accidents de la route : un aperçu des examens systématiques</a>  <img alt="Safety" height="15" src="../../../public/images/small_cone_icon.gif" width="13"/></h2>
 Cet aperçu de 35 revues systématiques a révélé que les campagnes de sécurité routière réduisaient de 9 % le nombre d'accidents de la route. Les campagnes médiatiques de masse ont réduit de 10 % les accidents dans toutes les études et tous les niveaux de gravité des accidents. L'application de la loi (par exemple, les points de contrôle de la sobriété) et les interventions d'ingénierie (par exemple, la conversion des intersections en ronds-points) ont eu des impacts encore plus importants. ... <strong><a href="../../../fr/ressources-de-sujets/detail/112">Lisez plus »</a></strong>
