--- a/fr/outils-de-changement/surmonter-des-obstacles-specifiques/index.html
+++ b/fr/outils-de-changement/surmonter-des-obstacles-specifiques/index.html
@@ -211,7 +211,7 @@ Vous voulez aider les habitants à surmonter les obstacles qui les empêchent de
 Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les maisons</a> offre une méthode efficace de démontrer que les améliorations éconergétiques sont rentables.</br></p>
 <p class="tip_example"><strong>Conseil:</strong> Cliquez sur une image pour l'agrandir. Cliquez votre bouton <em>Back</em> pour retourner à cette page.<br>
 <a href="/images/documentimages/GetInLoop/GetInLoop-1.jpg"><img alt="Get in the Loop image" border="0" height="96" src="/images/documentimages/GetInLoop/GetInLoop-1.jpg" width="181"/></a><br>
-	Un repère de <a href="../../../fr/études-de-cas/detail/10/"><em>Get in the Loop</em></a></br></br></p>
+	Un repère de <a href="../../../fr/etudes-de-cas/detail/10/"><em>Get in the Loop</em></a></br></br></p>
 </div><!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Votre Programme</h1>
@@ -273,7 +273,7 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
 <td valign="top" width="33%">Cynisme face aux affirmations environnementales </td>
 <td valign="top" width="33%">On a fourni des étiquettes aux points de vente (repères sur
     les rayons) et un soutien promotionnel </td>
-<td valign="top" width="34%"><a href="toc/fr/études-de-cas/detail/10"><i>Get in
+<td valign="top" width="34%"><a href="toc/fr/etudes-de-cas/detail/10"><i>Get in
     the Loop - Buy Recycled </i></a></td>
 </tr>
 <tr>
@@ -282,84 +282,84 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
     participer de toute autre façon </td>
 <td valign="top" width="33%">On a fourni des étiquettes aux points de vente (repères sur
     les rayons) </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/10"><i>Get in the Loop - Buy Recycled</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/10"><i>Get in the Loop - Buy Recycled</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a assuré la livraison de boîtes bleues et de composteurs
     gratuits à tous les foyers </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a offert un service à domicile pour aider les gens à
     sélectionner leurs arbres ombreux </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/14"><i>Guelph 2000</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/14"><i>Guelph 2000</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a ramassé les produits recyclables placés au bord de la
     rue </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a pris les arrangements voulus pour que les entrepreneurs
     effectuent le travail </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/17"><i>JEEP</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/17"><i>JEEP</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">L'adhésion au programme fut facilitée en l'incorporant au processus d'inscription à l'Université</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/96"><i>U-Pass</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/96"><i>U-Pass</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%">Coût </td>
 <td valign="top" width="33%">On a vendu des contenants recyclables pour les repas à
     l'école durant des soirées parents-enseignants</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/18">École publique Norway</a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/18">École publique Norway</a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a offert une aide financière et des incitatifs à l'achat
     </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/études-de-cas/detail/12"><i>Go Boulder</i></a>, <a href="../../../fr/études-de-cas/detail/17"><i>JEEP</i></a>, <a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a>,
-    <a href="../../../fr/études-de-cas/detail/22"><i>ReCAP</i></a>, <a href="../../../fr/études-de-cas/detail/9"><i>Environment Network</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/etudes-de-cas/detail/12"><i>Go Boulder</i></a>, <a href="../../../fr/etudes-de-cas/detail/17"><i>JEEP</i></a>, <a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a>,
+    <a href="../../../fr/etudes-de-cas/detail/22"><i>ReCAP</i></a>, <a href="../../../fr/etudes-de-cas/detail/9"><i>Environment Network</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a offert des rabais pour la participation de groupe </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/12"><i>Go Boulder</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/12"><i>Go Boulder</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a pris des ententes avec les entrepreneurs pour qu'ils
     demandent un cachet fixe et raisonnable </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/études-de-cas/detail/17"><i>JEEP</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/etudes-de-cas/detail/17"><i>JEEP</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a offert des prêts à faible intérêt </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/22"><i>ReCAP</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/22"><i>ReCAP</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%">Préoccupations des parents quant à la sécurité des
     enfants qui se rendent à l'école à bicyclette </td>
 <td valign="top" width="33%">On a offert des cours de sécurité à bicyclette et des
     séances de pratique, en plus d'engager la participation des parents</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/5"><i>Bike Smarts</i></a> (école Lochside) </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/5"><i>Bike Smarts</i></a> (école Lochside) </td>
 </tr>
 <tr>
 <td valign="top" width="33%">Tâche « peu appétissante » </td>
 <td valign="top" width="33%">On a lancé des programmes éducatifs de renforcement
     démontrant combien l'activité était facile et propre (compostage) </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/études-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/4"><i>Be WaterWise</i></a>, <a href="../../../fr/etudes-de-cas/detail/21"><i>Quinte Regional Recycling</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">On a pris des ententes avec les entrepreneurs pour qu'ils
     demandent un cachet fixe et raisonnable (remplacement des toilettes) </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/4"><i>Be WaterWise</i></a></td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/4"><i>Be WaterWise</i></a></td>
 </tr>
 <tr>
 <td valign="top" width="33%">En ce qui touche les autres choix de transport au travail,
@@ -367,23 +367,23 @@ Le programme <a href="../../../fr/etudes-de-cas/detail/82">ÉnerGuide pour les m
     travailler tard </td>
 <td valign="top" width="33%">On a offert le retour garanti en taxi dans de telles
     circonstances </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/12"><i>Go Boulder</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/12"><i>Go Boulder</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%"> </td>
 <td valign="top" width="33%">le remboursement du retour au domicile</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/96">U-Pass</a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/96">U-Pass</a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%">Manque d'infrastructures pour appuyer les choix plus
     écologiques </td>
 <td valign="top" width="33%">On a graduellement modifié l'infrastructure </td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/12"><i>Go Boulder</i></a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/12"><i>Go Boulder</i></a> </td>
 </tr>
 <tr>
 <td valign="top" width="33%">L'inquiétude de perdre les privilèges associés aux présents choix s'ils essayaient les modes de remplacement proposés </td>
 <td valign="top" width="33%">Conservaient leurs privilèges de stationnement pour une période d'essai<br/>Déplacements en soirée : pour ceux qui devaient rester  tard le soir sur le campus</td>
-<td valign="top" width="34%"><a href="../../../fr/études-de-cas/detail/96">U-Pass</a> </td>
+<td valign="top" width="34%"><a href="../../../fr/etudes-de-cas/detail/96">U-Pass</a> </td>
 </tr>
 </table>
 </div>
