--- a/fr/ressources-de-sujets/efficacite-energetique/index.html
+++ b/fr/ressources-de-sujets/efficacite-energetique/index.html
@@ -112,7 +112,7 @@ Notre panel de pairs pour l'énergie des bâtiments a désigné deux études de 
 </em></div>
 <div class="left_content2">
 <div class="ms_col_left">
-<h1 class="header_2col">Études de cas les plus récentes : Efficacité Énergétique</h1>
+<h1 class="header_2col">Études de cas les plus récentes : Efficacite Energetique</h1>
 <div class="highlight_box"><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/"> Recherche avancée d’études de cas</a></div>
 <h2 class="sub_header_2col">
 <img alt="Landmark Case Study" class="landmark_div" height="27" src="../../../public/images/landmark_white.gif"/>
@@ -135,7 +135,7 @@ Notre panel de pairs pour l'énergie des bâtiments a désigné deux études de 
 <p><img alt="arrow icon" class="left_arrow_icon" height="11" src="../../../public/images/arrow_icon.gif" width="11"/><a href="../../../fr/etudes-de-cas/recherche-de-etudes-de-cas/advanced-search-results/?-MaxRecords=50&amp;-SkipRecords=0&amp;-Op=bw&amp;do=case_studies&amp;-Op=bw&amp;special=mood&amp;-Op=bw&amp;-Op=bw&amp;topic=Energy&amp;button=Submit">PLUS »</a></p>
 </div>
 <div class="ms_col_right">
-<h1 class="header_2col">Ressources de sujets les plus récentes : Efficacité Énergétique</h1>
+<h1 class="header_2col">Ressources de sujets les plus récentes : Efficacite Energetique</h1>
 <div class="highlight_box"><a href="../../../fr/ressources-de-sujets/recherche-de-ressources-de-sujets/">Recherche avancée de ressources de sujets</a></div>
 <h2 class="sub_header_2col"><a href="../../../fr/ressources-de-sujets/detail/88">Le rôle des personnes à statut socioéconomique élevé dans la réduction rapide des émissions de gaz à effet de serre</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/></h2>
 Vaut-il la peine de cibler les personnes au statut socioéconomique élevé, avec des interventions personnalisées ? Cet article en libre accès explore comment ils peuvent avoir un impact disproportionné sur les émissions de gaz à effet de serre et potentiellement sur l'atténuation et l'adaptation au changement climatique en tant que consommateurs, investisseurs, modèles, participants organisationnels et citoyens. ... <strong><a href="../../../fr/ressources-de-sujets/detail/88">Lisez plus »</a></strong>
